--- a/Resources/pages/about.html
+++ b/Resources/pages/about.html
@@ -1,22 +1,60 @@
 <html>
 <head>
-  <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0" /> <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>About CODESTRONG</title>
-  <title>Friday, March 11th</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport"
+          content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <title>About Nuxeo World</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body class="about" style="background-image:url('cloud_stripes_ipad.png');">
-  <img src="cs_logo_large.png" style="width:96%;"/>
-  <section>
-  	<h2>About CODESTRONG</h2>
-    <p>CODESTRONG is an international event that brings together the people who use,
-      develop, design, and support the Appcelerator Titanium platform. CODESTRONG will be
-      held September 18-20, 2011, at the InterContinental Hotel in San Francisco, California.</p>
+<img src="cs_logo_large.png" style="width:96%;"/>
+<section>
+  <h2>About Nuxeo World</h2>
 
-    <p>The conference features dozens of curated sessions and panels from some of
-      the most influential people and brightest minds within the Titanium community
-      and beyond, as well as countless opportunities for networking, sprints,
-      informal conversations, and more.</p>
-  </section>
+  <p>We are pleased to invite you to Nuxeo World 2011, the second edition of our international conference on
+    Nuxeo technology and solutions.</p>
+
+  <p>Whether you're a partner or a customer, Nuxeo World provides multiple opportunities to discuss ECM topics and share
+    experiences.</p>
+
+  <h3>Why attend?</h3>
+  <ul>
+
+    <li>Discuss ECM topics</li>
+
+    <li>Share your experiences</li>
+
+    <li>Learn how Nuxeo can impact your business</li>
+
+    <li>Take notes of best practices in the ECM field</li>
+
+    <li>Network with industry experts</li>
+
+    <li>Reach an audience tuned in to ECM and Open Source</li>
+
+  </ul>
+
+  <h3>Who should attend?</h3>
+  <ul>
+
+    <li>Developers</li>
+
+    <li>Partners</li>
+
+    <li>Customers</li>
+
+    <li>Contributors</li>
+
+    <li>Students</li>
+
+    <li>Integrators</li>
+
+    <li>Competitors (after all, we're open!)</li>
+
+    <li>Everyone interested in ECM or Open Source</li>
+
+  </ul>
+
+</section>
 </body>
 </html>
