--- a/Resources/pages/about.html
+++ b/Resources/pages/about.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <meta name="viewport"
-          content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0"/>
+    content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>About Nuxeo World</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
-<body class="about" style="background-image:url('cloud_stripes_ipad.png');">
+<body class="about">
 <img src="cs_logo_large.png" style="width:96%;"/>
 <section>
   <h2>About Nuxeo World</h2>
