--- a/Resources/pages/sponsors_ipad.html
+++ b/Resources/pages/sponsors_ipad.html
@@ -1,46 +1,51 @@
 <html>
 <head>
-  <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0" /> <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport"
+          content="user-scalable=yes, width=device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 10.0"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>About our Sponsors</title>
-  <title>Friday, March 11th</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css"/>
   <style>
-  	td {
-  		text-align: center;	
-  	}
-  	img {
-  		width: 250px;	
-  	}
-  	table {
-  		width: 100%;	
-  	}
+    td {
+      text-align: center;
+    }
+
+    img {
+      width: 250px;
+    }
   </style>
 </head>
-<body class="about" style="background-image:url('cloud_stripes_ipad.png'); text-align:center;">
-	      <img src="cs_logo_large.png" style="width:96%;"/> 
-  <section>
-    <h2>About our Sponsors</h2>
-    <p>The following companies and organizations support CODESTRONG through their sponsorships. We'd like to thank them for 
-    	their generous support!
-    </p>
-    
-    <table cellpadding="20">
-    	<tr>
-    		<td><a href="http://www.appcentral.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.appcentral.com/'}); return false;"><img src="sponsors/AppCentral logo.png"/></a></td>
-    		<td><a href="http://www.millennialmedia.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.millennialmedia.com/'}); return false;"><img src="sponsors/millenial_media_logo.png"/></a></td>
-    	</tr>
-    	<tr>
-    		<td><a href="http://www.mopapp.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.mopapp.com/'}); return false;"><img src="sponsors/Mopapp_Pos_Col.png"/></a></td>
-    		<td><a href="http://nookdeveloper.barnesandnoble.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://nookdeveloper.barnesandnoble.com'}); return false;"><img src="sponsors/nook_dev_logo.png"/></a></td>
-    	</tr>
-		<tr>
-    		<td><a href="http://twilio.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://twilio.com/'}); return false;"><img src="sponsors/twilio_logo.png"/></a></td>
-    		<td><a href="http://www.x.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.x.com/'}); return false;"><img src="sponsors/X_logo_stack__full_rgb.png" style="width:140px;"/></a></td>
-    	</tr>
-		<tr>
-    		<td colspan="2"><a href="http://www.yume.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.yume.com/'}); return false;"><img src="sponsors/yume_logo.png"/></a></td>
-    	</tr>
-    </table>
-  </section>
+<body class="about" style="text-align:center;">
+<img src="cs_logo_large.png" style="width:96%;"/>
+<section>
+  <h2>About our Sponsors</h2>
+
+  <p>The following companies support Nuxeo World through their sponsorships. We'd like to thank them
+    for their generous support! </p>
+
+  <a href="http://www.smile-oss.com/"
+          onclick="Ti.App.fireEvent('openURL', {url:'http://www.smile-oss.com/'}); return false;"><img
+          src="sponsors/smile_logo.jpg"/></a>
+  <br><br>
+  <a href="http://www.sword-group.com/"
+          onclick="Ti.App.fireEvent('openURL', {url:'http://www.sword-group.com/'}); return false;"><img
+          src="sponsors/sword_logo.jpg"/></a>
+  <br><br>
+  <a href="http://www.rlnx.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.rlnx.com/'}); return false;"><img
+          src="sponsors/rlnx_logo.png"/></a>
+  <br><br>
+  <a href="http://www.scality.com/"
+          onclick="Ti.App.fireEvent('openURL', {url:'http://www.scality.com'}); return false;"><img
+          src="sponsors/scality_logo.png"/></a>
+  <br><br>
+  <a href="http://www.washingtonconsulting.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.washingtonconsulting.com/'}); return false;"><img
+          src="sponsors/ws_logo.jpg"/></a>
+  <br><br>
+  <a href="http://www.ephesoft.com/" onclick="Ti.App.fireEvent('openURL', {url:'http://www.ephesoft.com/'}); return false;"><img
+          src="sponsors/ephesoft_logo.png" style="width:140px;"/></a>
+  <br><br>
+  <a href="http://www.fujitsu.com/emea/products" onclick="Ti.App.fireEvent('openURL', {url:'http://www.fujitsu.com/emea/products'}); return false;"><img
+          src="sponsors/fujitsu_logo.jpg"/></a>
+</section>
 </body>
 </html>  
