--- a/Resources/pages/maps/map_2nd.html
+++ b/Resources/pages/maps/map_2nd.html
@@ -3,6 +3,6 @@
   <title>Floor 3 - Grand Ballroom</title>
 </head>
 <body style="padding:0; margin:0;">
-  <img src="4th_floor_ipad.png" style="height:100%"/>
+  <img src="2nd_floor_ipad.png" style="height:100%"/>
 </body>
 </html>
