--- a/Resources/pages/maps/map_rdc.html
+++ b/Resources/pages/maps/map_rdc.html
@@ -3,6 +3,6 @@
   <title>Floor 3 - Grand Ballroom</title>
 </head>
 <body style="padding:0; margin:0;">
-  <img src="3rd_floor_ipad.png" style="height:100%"/>
+  <img src="rdc_ipad.png" style="height:100%"/>
 </body>
 </html>
